# mlops

./: README.md  build.py  extract_pdf.ipynb  extract_pdf.py  main.py  prefect.yaml  print_flow.py  pyproject.toml  query_doc.py  tiny.txt  watch_and_run.py
app/: api.py  ui.py
mlops/: __init__.py
mlops/flows/: __init__.py  document_flow.py  flow_description.py  polling_flow.py
mlops/query/: __init__.py  query_engine.py
mlops/tasks/: __init__.py  ner_relations.py  pdf_extraction.py  persistence.py  retrieval_index.py  topic_modeling.py
