[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy==1.16.2",
    "networkx==3.5",
    "pymupdf==1.26.4",
    "watchdog==6.0.0",
    "pillow==11.3.0",
    "rank-bm25==0.2.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "gradio>=5.46.0",
    "fastapi[standard]>=0.116.2",
    "spacy-transformers>=1.3.9",
    "transformers>=4.49.0",
    "sentence-transformers>=5.1.0",
    "hnswlib>=0.8.0",
    "cupy-cuda12x>=13.6.0",
    "pip>=25.2",
]
